--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,8 @@
         <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
-        <h1>Hello, World!</h1>
+
         <h2>Welcome to my website.</h2>
+        <p>This is a simple HTML document styled with an external CSS file.</p>
     </body>
 </html>
