--- a/hello.html
+++ b/hello.html
@@ -7,5 +7,6 @@
 
         <h2>Welcome to my website.</h2>
         <p>This is a simple HTML document styled with an external CSS file.</p>
+        <p>The heading above should be red with a yellow background.</p>
     </body>
 </html>
