--- a/hello.html
+++ b/hello.html
@@ -5,9 +5,9 @@
     </head>
     <body>
 
-        <h2>Welcome to my website.</h2>
+        <h2>Welcome to my</h2>
         <p>This is a simple HTML document styled with an external CSS file.</p>
         <p>The heading above should be red with a yellow background.</p>
-        <!-- <p>This paragraph is commented out and should not appear in the rendered page.</p
+        <!-- <p>This paragraph is commented out and should not appear in the rendered page.</p> -->
     </body>
 </html>
