Fix commented paragraph in hello.html to render correctly

--- a/hello.html
+++ b/hello.html
@@ -8,6 +8,6 @@
         <h2>Welcome to my website.</h2>
         <p>This is a simple HTML document styled with an external CSS file.</p>
         <p>The heading above should be red with a yellow background.</p>
-        <!-- <p>This paragraph is commented out and should not appear in the rendered page.</p
+        <p>This paragraph is commented out and should not appear in the rendered page.</p>
     </body>
 </html>
