Fix duplicate image tag in hello.html

--- a/hello.html
+++ b/hello.html
@@ -9,5 +9,6 @@
         <p>This is a simple HTML document styled with an external CSS file.</p>
         <p>The heading above should be red with a yellow background.</p>
         <p>This paragraph is commented out and should not appear in the rendered page.</p>
+        <img src="image.jpg" alt="A descriptive text for the image"/>
     </body>
 </html>
